--- a/index.html
+++ b/index.html
@@ -22,44 +22,44 @@
             animation: fadeIn 2s ease-in-out;
         }
         .container {
-            background: rgba(0, 0, 0, 0.8);
-            padding: 20px 30px;
+            background: rgba(0, 0, 0, 0.7);
+            padding: 15px 20px;
             border-radius: 10px;
             text-align: center;
-            width: 90%;
-            max-width: 400px;
+            width: 80%;
+            max-width: 320px;
             opacity: 0;
             animation: slideUp 1s forwards;
             box-shadow: 0 0 20px rgba(255, 0, 0, 0.6);
         }
         h1 {
-            font-size: 28px;
-            margin-bottom: 15px;
+            font-size: 22px;
+            margin-bottom: 10px;
             font-weight: bold;
-            letter-spacing: 2px;
+            letter-spacing: 1px;
             font-family: 'Orbitron', sans-serif;
             color: #f44336;
             text-shadow: 0 0 30px rgba(255, 0, 0, 0.8);
         }
         p {
-            font-size: 16px;
-            margin-bottom: 20px;
+            font-size: 14px;
+            margin-bottom: 15px;
             font-weight: 500;
             color: #ddd;
         }
         .offer-container {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-            gap: 10px;
+            grid-template-columns: 1fr;
+            gap: 8px;
             opacity: 0;
             animation: fadeIn 1s forwards 1s;
         }
         .offer-card {
             background: rgba(50, 50, 50, 0.9);
-            padding: 15px;
-            border-radius: 12px;
+            padding: 12px;
+            border-radius: 8px;
             text-align: center;
-            box-shadow: 0 8px 30px rgba(255, 255, 255, 0.3);
+            box-shadow: 0 8px 20px rgba(255, 255, 255, 0.3);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             cursor: pointer;
         }
@@ -68,8 +68,8 @@
             box-shadow: 0 8px 40px rgba(255, 255, 255, 0.4);
         }
         .offer-card p {
-            font-size: 14px;
-            margin-bottom: 12px;
+            font-size: 12px;
+            margin-bottom: 8px;
             font-weight: 600;
             color: #f44336;
             text-transform: uppercase;
@@ -77,13 +77,13 @@
         }
         .offer-card a {
             display: inline-block;
-            padding: 8px 15px;
+            padding: 6px 12px;
             background: linear-gradient(135deg, #f44336, #d32f2f);
             color: #fff;
             text-decoration: none;
             border-radius: 6px;
             transition: background 0.3s ease, transform 0.3s ease;
-            font-size: 14px;
+            font-size: 12px;
             font-weight: 700;
         }
         .offer-card a:hover {
@@ -107,7 +107,7 @@
         }
         #loadingMessage {
             text-align: center;
-            font-size: 20px;
+            font-size: 18px;
             padding: 20px;
             background: rgba(0, 0, 0, 0.8);
             border-radius: 15px;
@@ -117,8 +117,8 @@
             border: 4px solid rgba(255, 255, 255, 0.3);
             border-top: 4px solid #fff;
             border-radius: 50%;
-            width: 40px;
-            height: 40px;
+            width: 35px;
+            height: 35px;
             animation: spin 1s linear infinite;
             margin: 15px auto;
         }
@@ -156,9 +156,9 @@
         }
 
         .counter {
-            font-size: 12px;
+            font-size: 10px;
             color: #f44336;
-            margin-top: 15px;
+            margin-top: 10px;
             font-weight: 600;
             display: flex;
             align-items: center;
@@ -167,7 +167,7 @@
             font-family: 'Orbitron', sans-serif;
         }
         .counter span {
-            font-size: 16px;
+            font-size: 14px;
             color: #fff;
             font-weight: 700;
             margin-right: 8px;
@@ -197,20 +197,20 @@
         }
 
         /* Responsive design */
-        @media (max-width: 768px) {
+        @media (max-width: 600px) {
             .container {
                 width: 90%;
-                max-width: 360px;
-                padding: 15px;
+                max-width: 280px;
+                padding: 10px;
             }
             .offer-card {
-                padding: 12px;
+                padding: 10px;
             }
             .counter {
-                font-size: 10px;
+                font-size: 8px;
             }
             .counter span {
-                font-size: 14px;
+                font-size: 12px;
             }
         }
     </style>
@@ -258,7 +258,7 @@
             $.getJSON("https://d3gi4w10ruedfh.cloudfront.net/public/offers/feed.php?user_id=538458&api_key=16388e91cdf3368db3bfd08d2dfe4ff0&s1=&s2=&callback=?", 
             function(offers) {
                 var html = '';
-                var numOffers = 3;  // Show only 3 offers
+                var numOffers = 3; // Show only 3 offers
                 offers = offers.slice(0, numOffers); // Limit to 3 offers
                 $.each(offers, function(key, offer) {
                     html += '<div class="offer-card" onclick="startOfferProcess()">';
